# yocto

./: Cargo.toml
src/: app.rs  key.rs  lib.rs  main.rs  terminal.rs  text.rs
src/app/: key.rs  text.rs
