[package]
name = "yocto-editor"
version = "0.1.0"
edition = "2021"
authors = ["TadoTheMiner"]
description = "A modern alternative to GNU nano"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
crossterm = { version = "0.27.0", default-features = false, features = ["bracketed-paste", "events"]}
ratatui = "0.25.0"
